common/service.yaml
#apiVersion: v1
#kind: Service
#metadata:
#  name: service
#spec:
#  ports:
#    - port: 80
#      targetPort: 8080
#      name: http-web
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
